# FastAPI-starterkit

./: .gitignore
fastapistarter/: README.md  pyproject.toml  pytest.ini
fastapistarter/migrations/: env.py
fastapistarter/migrations/versions/: c9ec123e4626_added_city.py  e7bff1bec4b5_initial.py
fastapistarter/src/: config.py  load_app.py
fastapistarter/src/database/db/: development.db
fastapistarter/src/database/models/: user.py
fastapistarter/src/routes/: user.py
fastapistarter/src/utils/: app_logger.py  decorators.py  singleton.py
fastapistarter/tests/: conftest.py
fastapistarter/tests/crud/: test_user_crud.py
fastapistarter/tests/routes/: test_user_routes.py
